# MMMatrixIO

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  matrix.hpp  matrixprinter.hpp  mmmatrix.h  mmmatrix.hpp  statsCollector.cpp
test/: run.sh  simple.mtx  simple_emptyrow.mtx  simple_emptyrow_expected.txt  simple_emptyrowcol.mtx  simple_emptyrowcol_expected.txt  simple_expected.mtx  simple_expected.txt  simple_pattern.mtx  simple_pattern_expected.mtx  simple_pattern_expected.txt  simple_precision.mtx  simple_precision_expected.txt  simple_shuffled.mtx  simple_shuffled_expected.txt
